--- a/style.css
+++ b/style.css
@@ -635,3 +635,15 @@ h2 {
     margin-bottom: 20px;
 }
 
+video {
+    align-content: end;
+    border-radius: 15px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    max-width: 100%;
+    display: block;
+    margin: auto;
+  }
+
+  
+  
+
